tests/baselines/reference/gettersAndSettersTypesAgree.errors.txt
==== tests/cases/compiler/gettersAndSettersTypesAgree.ts (8 errors) ====
    class C {
        public get Foo() { return "foo";} // ok
                   ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public set Foo(foo) {} // ok - type inferred from getter return statement
                   ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        public get Bar() { return "foo";} // ok
                   ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public set Bar(bar:string) {} // ok - type must be declared
                   ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    var o1 = {get Foo(){return 0;}, set Foo(val){}}; // ok - types agree (inference)
                  ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                                        ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    var o2 = {get Foo(){return 0;}, set Foo(val:number){}}; // ok - types agree
                  ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                                        ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.